@@ -1,3 +1,8 @@
+Mon Mar  2 13:04:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* signal.c (sig_signame): return nil if the argument is a valid
+	  signal number.
+
 Mon Mar  2 12:05:04 2015  Naohisa Goto  <ngotogenome@gmail.com>
 
 	* test/net/ftp/test_ftp.rb (create_ftp_server): set SO_OOBINLINE
